--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Generate Datas
+name: Snake Game
 
 on:
   schedule: # execute every 12 hours
@@ -15,6 +15,7 @@ jobs:
         id: snake-gif
         with:
           github_user_name: faveroo
+          gif_out_path: dist/github-contribution-grid-snake.gif
           svg_out_path: dist/github-contribution-grid-snake.svg
 
       - uses: crazy-max/ghaction-github-pages@v2.1.3
